--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cloudinary": "^2.0.1",
+        "cloudinary": "^2.6.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -19,6 +19,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.3",
         "multer": "^1.4.5-lts.1",
+        "multer-gridfs-storage": "^5.0.2",
         "nodemailer": "^6.9.13",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
