--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.12.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-scrollable-feed": "^2.0.1",
     "react-toastify": "^10.0.4",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1"
   },
