--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,22 +1,19 @@
-# Use an official Node.js runtime as a base image (npm is included in this image)
-FROM node:20
-
-# fetch the latest version of the package lists
-RUN apt-get update
+# Use a lightweight Alpine base image instead
+FROM node:20-alpine
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the contents of the Backend directory
-COPY Backend/ /app/Backend
+# Copy package.json and package-lock.json first for better caching
+COPY Backend/package*.json /app/Backend/
 
 WORKDIR /app/Backend
 
-# Remove node_modules and .env files from the Backend directory if they exist
-RUN rm -rf node_modules .env
-
-# Install Node.js dependencies in the container app directory
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the Backend directory
+COPY Backend/ /app/Backend/
 
 ARG PORT
 ARG CORS_ORIGIN
@@ -28,9 +25,15 @@ ARG GOOGLE_CLIENT_ID
 ARG GOOGLE_CLIENT_SECRET
 ARG GOOGLE_CALLBACK_URL
 ARG JWT_SECRET
+ARG EMAIL_ID
+ARG APP_PASSWORD
+ARG NODE_ENV=production
+ARG VERCEL_URL=https://backend-5l3616x2m-snehas-projects-3f585613.vercel.app
 
+# Set production callback URL for Google OAuth
+ENV PROD_CALLBACK_URL=${VERCEL_URL}/auth/google/callback
 
-#write the environment variables to a .env file
+# Write the environment variables to a .env file
 RUN echo "PORT=${PORT}" > .env \
     && echo "CORS_ORIGIN=${CORS_ORIGIN}" >> .env \
     && echo "MONGODB_URI=${MONGODB_URI}" >> .env \
@@ -39,12 +42,12 @@ RUN echo "PORT=${PORT}" > .env \
     && echo "CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}" >> .env \
     && echo "GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}" >> .env \
     && echo "GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}" >> .env \
-    && echo "GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}" >> .env \
-    && echo "JWT_SECRET=${JWT_SECRET}" >> .env
+    && echo "GOOGLE_CALLBACK_URL=${NODE_ENV == 'production' ? PROD_CALLBACK_URL : GOOGLE_CALLBACK_URL}" >> .env \
+    && echo "JWT_SECRET=${JWT_SECRET}" >> .env \
+    && echo "EMAIL_ID=${EMAIL_ID}" >> .env \
+    && echo "APP_PASSWORD=${APP_PASSWORD}" >> .env
 
-RUN cat .env
-
-# expose the port 8000
+# Expose the port 8000
 EXPOSE 8000
 
 # Run the Node.js application
