--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,29 +1,26 @@
-# Use an official Node.js runtime as a base image (npm is included in this image)
-FROM node:20
-
-# fetch the latest version of the package lists
-RUN apt-get update
+# Use a lightweight Alpine base image instead
+FROM node:20-alpine
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the contents of the Frontend directory
-COPY Frontend/ /app/Frontend
+# Copy package.json and package-lock.json first for better caching
+COPY Frontend/package*.json /app/Frontend/
 
 WORKDIR /app/Frontend
 
-# Remove node_modules and .env files from the Frontend directory if they exist
-RUN rm -rf node_modules .env
-
-# Install Node.js dependencies in the container app directory
+# Install dependencies
 RUN npm install
 
+# Copy the rest of the Frontend directory
+COPY Frontend/ /app/Frontend/
+
 ARG VITE_LOCALHOST
+ARG VITE_SERVER_URL=https://backend-5l3616x2m-snehas-projects-3f585613.vercel.app
 
-#write the environment variables to a .env file
-RUN echo "VITE_LOCALHOST=${VITE_LOCALHOST}" > .env
-
-RUN cat .env
+# Write the environment variables to a .env file
+RUN echo "VITE_LOCALHOST=${VITE_LOCALHOST}" > .env \
+    && echo "VITE_SERVER_URL=${VITE_SERVER_URL}" >> .env
 
 EXPOSE 5173
 
